Using Spring Data Rest

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 logging.level.org.hibernate.SQL=DEBUG
 logging.leve.org.hibernate.type.description.sql.BasicBinder=TRACE
+spring.data.rest.base-path=/api
