--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/springdatasortingpaging?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
 logging.level.org.hibernate.SQL=DEBUG
 logging.leve.org.hibernate.type.description.sql.BasicBinder=TRACE
+
 spring.data.rest.base-path=/api
